# terminal-snake

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
assets/themes/: molokai.json  monokai.json
packaging/homebrew/: terminal-snake.rb
src/: config.rs  food.rs  game.rs  input.rs  lib.rs  main.rs  platform.rs  renderer.rs  score.rs  snake.rs  terminal_runtime.rs  theme.rs
src/ui/: hud.rs  menu.rs
tests/: deterministic_sequence.rs
