[package]
name = "terminal-snake"
version = "0.6.24"
edition = "2024"
autobins = false

[[bin]]
name = "terminal-snake"
path = "src/main.rs"

[[bin]]
name = "fontest"
path = "src/bin/fontest.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
gilrs = "0.11"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-width = "0.1"

[build-dependencies]
serde_json = "1"
