[package]
name = "terminal-snake"
version = "0.8.11"
edition = "2024"
description = "Retro cross-platform terminal Snake game in Rust"
license = "MIT"
homepage = "https://github.com/tfmalt/terminal-snake"
repository = "https://github.com/tfmalt/terminal-snake"
keywords = ["snake", "terminal", "game", "ratatui", "rust"]
categories = ["games", "command-line-interface"]
autobins = false

[features]
default = []
fontest = []

[[bin]]
name = "terminal-snake"
path = "src/main.rs"

[[bin]]
name = "fontest"
path = "src/bin/fontest.rs"
required-features = ["fontest"]

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
dirs = "5"
rand = "0.8"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
unicode-width = "0.1"

[build-dependencies]
serde_json = "1"
